5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1649_1053.log
== SUBMITION (2019-04-08 23:35:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Digite seu patrono: ")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	print(mensagem)
else:
	mensagem = patrono + " " + "nao eh patrono do Harry Potter"
	print(mensagem)
	
-- EXECUTION TIME:
0.147638
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
Digite seu patrono: cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
Digite seu patrono: bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 23:36:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("Digite seu patrono: ")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	print(mensagem)
else:
	mensagem = patrono + " " + "nao eh patrono do Harry Potter"
	print(mensagem)
	
-- EXECUTION TIME:
0.1883
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:54:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

	
-- EXECUTION TIME:
0.171911
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:

-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:06:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Escolha seu Patrono: ")
if(patrono=="coruja"):
	mensagem="Coruja eh patrono de Harry Potter"
	print(mensagem)
else:
	mensagem= "nao eh Patrono de Harry Potter"
	print(patrono+mensagem)
-- OUTPUT:
cervonao eh Patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:07:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Escolha seu Patrono: ")
if(patrono=="coruja"):
	mensagem="Coruja eh patrono de Harry Potter"
	print(mensagem)
else:
	mensagem= "nao eh Patrono de Harry Potter"
	print(patrono  +  mensagem)
-- EXECUTION TIME:
0.188157
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervonao eh Patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh Patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:07:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Escolha seu Patrono: ")
if(patrono=="coruja"):
	mensagem="Coruja eh patrono de Harry Potter"
	print(mensagem)
else:
	mensagem= "nao eh Patrono de Harry Potter"
	print(patrono  +  mensagem)
-- OUTPUT:
cervonao eh Patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:07:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Escolha seu Patrono: ")
if(patrono=="coruja"):
	mensagem="Coruja eh patrono de Harry Potter"
	print(mensagem)
else:
	mensagem= " nao eh Patrono de Harry Potter"
	print(patrono  +  mensagem)
-- OUTPUT:
cervo nao eh Patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:08:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Escolha seu Patrono: ")
if(patrono=="coruja"):
	mensagem="Coruja eh patrono de Harry Potter"
	print(mensagem)
else:
	mensagem= " nao eh Patrono de Harry Potter"
	print(patrono  +  mensagem)
-- EXECUTION TIME:
0.149825
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo nao eh Patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh Patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:08:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Escolha seu Patrono: ")
if(patrono=="cervo"):
	mensagem="cervo eh patrono de Harry Potter"
	print(mensagem)
else:
	mensagem= " nao eh Patrono de Harry Potter"
	print(patrono  +  mensagem)
-- EXECUTION TIME:
0.194832
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh Patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:09:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Escolha seu Patrono: ")
if(patrono=="cervo"):
	mensagem="cervo eh patrono de Harry Potter"
	print(mensagem)
else:
	mensagem= " nao eh Patrono de Harry Potter"
	print(patrono  +  mensagem)
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:10:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Escolha seu Patrono: ")
if(patrono=="cervo"):
	mensagem="cervo eh patrono de Harry Potter"
	print(mensagem)
else:
	mensagem= " nao eh Patrono de Harry Potter"
	print(patrono  +  mensagem)
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:10:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Escolha seu Patrono: ")
if(patrono=="cervo"):
	mensagem="cervo eh patrono de Harry Potter"
	print(mensagem)
else:
	mensagem= " nao eh patrono de Harry Potter"
	print(patrono  +  mensagem)
-- EXECUTION TIME:
0.185411
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:13:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Escolha seu Patrono: ")
if(patrono=="cervo"):
	mensagem="cervo eh patrono de Harry Potter"
	print(mensagem)
else:
	mensagem= " nao eh patrono de Harry Potter"
	print(patrono  +  mensagem)
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:13:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Escolha seu Patrono: ")
if(patrono=="cervo"):
	mensagem="cervo eh patrono de Harry Potter"
	print(mensagem)
else:
	mensagem= " nao eh patrono de Harry Potter"
	print(patrono  +  mensagem)
-- EXECUTION TIME:
0.171426
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:13:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Escolha seu Patrono: ")
if(patrono=="cervo"):
	mensagem="cervo eh patrono de Harry Potter"
	print(mensagem)
else:
	mensagem= " nao eh patrono de Harry Potter"
	print(patrono  +  mensagem)
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:13:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Escolha seu Patrono: ")
if(patrono=="cervo"):
	mensagem="cervo eh patrono de Harry Potter"
	print(mensagem)
else:
	mensagem= " nao eh patrono de Harry Potter"
	print(patrono  +  mensagem)
-- EXECUTION TIME:
0.194542
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:16:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Escolha seu Patrono: ")
if(patrono=="cervo"):
	mensagem="cervo eh patrono de Harry Potter"
	print(mensagem)
else:
	mensagem= " nao eh patrono de Harry Potter"
	print(patrono  +  mensagem)
-- EXECUTION TIME:
0.20189
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:16:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Escolha seu Patrono: ")
if(patrono=="cervo"):
	mensagem="cervo eh patrono de Harry Potter"
	print(mensagem)
else:
	mensagem= " nao eh patrono de Harry Potter"
	print(patrono  +  mensagem)
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:16:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Escolha seu Patrono: ")
if(patrono=="cervo"):
	mensagem="cervo eh patrono de Harry Potter"
	print(mensagem)
else:
	mensagem= " nao eh patrono de Harry Potter"
	print(patrono  +  mensagem)
-- EXECUTION TIME:
0.148713
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:16:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Escolha seu Patrono: ")
if(patrono=="cervo"):
	mensagem="cervo eh patrono de Harry Potter"
	print(mensagem)
else:
	mensagem= " nao eh patrono de Harry Potter"
	print(patrono  +  mensagem)
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:17:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Escolha seu Patrono: ")
if(patrono=="cervo"):
	mensagem="cervo eh patrono de Harry Potter"
	print(mensagem)
else:
	mensagem= " nao eh patrono de Harry Potter"
	print(patrono  +  mensagem)
-- EXECUTION TIME:
0.244654
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:18:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Escolha seu Patrono: ")
if(patrono=="cervo"):
	mensagem="cervo eh patrono de Harry Potter"
	print(mensagem)
else:
	mensagem= "nao eh patrono de Harry Potter"
	print(patrono+" "+mensagem)
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:18:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Escolha seu Patrono: ")
if(patrono=="cervo"):
	mensagem="cervo eh patrono de Harry Potter"
	print(mensagem)
else:
	mensagem= "nao eh patrono de Harry Potter"
	print(patrono+" "+mensagem)
-- EXECUTION TIME:
0.181717
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:18:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Escolha seu Patrono: ")
if(patrono=="cervo"):
	mensagem="cervo eh patrono de Harry Potter "
	print(mensagem)
else:
	mensagem= "nao eh patrono de Harry Potter "
	print(patrono+" "+mensagem)
-- EXECUTION TIME:
0.171634
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:18:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Escolha seu Patrono: ")
if(patrono=="cervo"):
	mensagem="cervo eh patrono de Harry Potter "
	print(mensagem)
else:
	mensagem= "nao eh patrono de Harry Potter "
	print(patrono+" "+mensagem)
-- EXECUTION TIME:
0.139111
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:19:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Escolha seu Patrono: ")
if(patrono=="cervo"):
	mensagem="cervo eh patrono de Harry Potter"
	print(mensagem)
else:
	print(patrono+" "+"nao eh patrono de Harry Potter")
-- EXECUTION TIME:
0.169458
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:20:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Escolha seu Patrono: ")
if(patrono=="cervo"):
	mensagem="cervo eh patrono de Harry Potter"
	print(mensagem)
else:
	print(patrono+" "+nao eh patrono de Harry Potter)
-- EXECUTION TIME:
0.140157
-- ERROR:
  File "/home/codebench/codes/1649/1053/main.py", line 9
    print(patrono+" "+nao eh patrono de Harry Potter)
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:24:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Escolha seu Patrono: ")
if(patrono=="cervo"):
	mensagem="cervo eh patrono do Harry Potter"
	print(mensagem)
else:
	mensagem= " nao eh patrono do Harry Potter"
	print(patrono  +  mensagem)
-- EXECUTION TIME:
0.118159
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:24:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Escolha seu Patrono: ")
if(patrono=="coruja"):
	mensagem="coruja eh patrono do Harry Potter"
	print(mensagem)
else:
	mensagem= " nao eh patrono do Harry Potter"
	print(patrono  +  mensagem)
-- EXECUTION TIME:
0.215595
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo nao eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:24:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Escolha seu Patrono: ")
if(patrono=="cervo"):
	mensagem="cervo eh patrono do Harry Potter"
	print(mensagem)
else:
	mensagem= " nao eh patrono do Harry Potter"
	print(patrono  +  mensagem)
-- EXECUTION TIME:
0.184155
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
